# localmind

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_Guide.md  Dockerfile  LICENSE  README.md  ROADMAP.md  ROOT_CAUSE.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json  vercel.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  dependency-security.yml  docs-regression.yml  integration-tests.yml  smoke-tests.yml
backend/: Dockerfile  app.py  demo_cancellation.py  json_validator.py  requirements.txt  requirements_fixed.txt  warmup.py
backend/middleware/: __init__.py  csrf.py
backend/models/: schemas.py
backend/routes/: chat.py  export.py  models.py  plugins.py  prompt_templates.py  (+3 more)
cli/: __init__.py  localmind.py
demo_videos/: README.md
docs/: chunking-tuning.md  contributor-onboarding.md  csrf-protection.md  dedupe-docs.md  failure-recovery.md  macos-troubleshooting.md  maintainer_onboarding.md  model-cache.md  observability-metrics.md  retry-policy.md  screenshots.md  stream-cancellation.md  streaming-cancellation.md  troubleshooting.md
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: chunk_tuner.py  collect_docs_metrics.py  dedupe_docs.py  embeddings_cache_cli.py  generate-release-notes.py  merge_citations.py  rank_sources.py  recover_docs_build.py  smoke-test.sh
tests/: smoke_test.sh  test_collect_docs_metrics.py  test_dedupe_docs.py  test_recover_docs_build.py
(+97 files in other folders)
