[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localmind-cli"
version = "0.1.0"
description = "LocalMind command line client"
requires-python = ">=3.10"
dependencies = [
  "httpx==0.27.0",
  "typer==0.12.3",
  "rich==13.7.1",
]

[project.scripts]
localmind = "cli.localmind:app"

[tool.setuptools]
packages = ["cli"]

